# mochicord

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.development.yaml
crates/antidox/: Cargo.toml
crates/cache/: Cargo.toml
crates/common/: Cargo.toml
crates/config/: Cargo.toml
crates/crypto/: Cargo.toml
crates/db/: Cargo.toml
crates/proto/: Cargo.toml
crates/storage/: Cargo.toml
crates/telemetry/: Cargo.toml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/kotlin/com/mochicord/app/mobile/: MainActivity.kt
mobile/ios/Runner.xcodeproj/: project.pbxproj
mochicord-app/: README.md  package.json
mochicord-app/src-tauri/: tauri.conf.json
mochicord-tui-app/: Cargo.toml
services/api/: Cargo.toml
services/auth/: Cargo.toml
services/bot-runtime/: Cargo.toml
services/federation/: Cargo.toml
services/gateway/: Cargo.toml
services/media/: Cargo.toml
services/payments/: Cargo.toml
services/proxy/: Cargo.toml
services/rt/: Cargo.toml
services/search/: Cargo.toml
services/worker/: Cargo.toml
