[package]
name = "mochicord-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "macros"] }
uuid = { version = "1.22.0", features = ["v7", "serde"] }
