[package]
name = "mochicord-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-login = "0.18.0"
hmac = "0.12.1"
jsonwebtoken = "10.3.0"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
tonic = { version = "0.14.5", features = ["transport", "tls-ring", "gzip"] }
tonic-health = "0.14.5"
tonic-reflection = "0.14.5"
tower-sessions = "0.15.0"
