[package]
name = "mochicord-media"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.15"
aws-sdk-s3 = "1.126.0"
moq-transport = "0.13.1"
quinn = { version = "0.11.9", features = ["ring"] }
rcgen = "0.14.7"
rustls = "0.23.37"
tokio = { version = "1.50.0", features = ["full"] }
tonic = { version = "0.14.5", features = ["transport", "tls-ring", "gzip"] }
